add style changes, new palette

--- a/design/index.html
+++ b/design/index.html
@@ -53,8 +53,8 @@
               and we will remove it from the index as soon as possible.
             </p>
             <p>
-              For more about Ahmia, see <a href="/documentation/indexing">documentation info</a>, the
-              <a href="//twitter.com/AhmiaNews">Ahmia Twitter feed</a>, or maybe
+              For more about Ahmia, see <a href="/documentation/indexing">documentation info</a>,
+              <a href="//twitter.com/AhmiaNews">@AhmiaNews</a> on Twitter, or maybe
               <a href="bitcoin:3CMc52oegWqorFsBRcakUGHkZEQMfLP43s">donate to the project via BTC</a>.
             </p>
           </div>
