clean breakage on home from results styles

--- a/design/index.html
+++ b/design/index.html
@@ -12,7 +12,7 @@
         <script src="js/less.min.js"></script>
         <script src="js/modernizr.js"></script>
     </head>
-    <body>
+    <body class="main">
       <div id="imageOverlay">&nbsp;</div>
       <div class="elastic outer">
         <div id="content" class="elastic inner">
