keyboard nav for results

--- a/design/results.html
+++ b/design/results.html
@@ -50,7 +50,7 @@
             </p>
           </div>
           <ol class="searchResults">
-            <li class="result" href="https://some.onion/" class="selectedItem">
+            <li class="result" href="https://some.onion/">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
               GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
@@ -110,10 +110,6 @@
       </div>
 
       <script src="js/jquery.min.js"></script>
-      <script>
-        $(document).ready(function() {
-          $("#id_q").focus();
-        });
-      </script>
+      <script src="js/results.js"></script>
     </body>
 </html>
