add jquery scroll to, clean up keyboard navigation and results

--- a/design/results.html
+++ b/design/results.html
@@ -50,7 +50,7 @@
             </p>
           </div>
           <ol class="searchResults">
-            <li class="result" href="https://some.onion/">
+            <li class="result" href="https://some.onion/" id="onion_key">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
               GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
@@ -110,6 +110,7 @@
       </div>
 
       <script src="js/jquery.min.js"></script>
+      <script src="js/jquery.scrollTo.js"></script>
       <script src="js/results.js"></script>
     </body>
 </html>
