--- a/design/results.html
+++ b/design/results.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Ahmia &mdash; Search Tor hidden services</title>
+        <title>Lorem ipsum dolor sit &mdash; Ahmia</title>
         <meta name="description" content="A search engine for services accessible on the Tor network.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
