add page navigation

--- a/design/results.html
+++ b/design/results.html
@@ -13,6 +13,7 @@
         <script src="js/modernizr.js"></script>
     </head>
     <body>
+      <a id="top"></a>
       <div class="outer">
         <div id="content" class="inner">
         <div id="notTorBrowserWarning">
@@ -53,11 +54,11 @@
             <li class="result" href="https://some.onion/" id="onion_key">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
-              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
-              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ... 
+              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks
+              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ...
               </p>
               <p class="metadata">
-                <cite>some.onion</cite> &mdash; 
+                <cite>some.onion</cite> &mdash;
                 <span class="lastSeen" data-timestamp="0">last seen 14 hours ago</span> &mdash;
                 <a href="#" title="Report this link to us">Report Abuse</a>
               </p>
@@ -65,11 +66,11 @@
             <li class="result" href="https://some.onion/" class="selectedItem">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
-              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
-              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ... 
+              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks
+              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ...
               </p>
               <p class="metadata">
-                <cite>some.onion</cite> &mdash; 
+                <cite>some.onion</cite> &mdash;
                 <span class="lastSeen" data-timestamp="0">last seen 14 hours ago</span> &mdash;
                 <a href="#" title="Report this link to us">Report Abuse</a>
               </p>
@@ -77,11 +78,11 @@
             <li class="result" href="https://some.onion/" class="selectedItem">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
-              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
-              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ... 
+              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks
+              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ...
               </p>
               <p class="metadata">
-                <cite>some.onion</cite> &mdash; 
+                <cite>some.onion</cite> &mdash;
                 <span class="lastSeen" data-timestamp="0">last seen 14 hours ago</span> &mdash;
                 <a href="#" title="Report this link to us">Report Abuse</a>
               </p>
@@ -89,18 +90,26 @@
             <li class="result" href="https://some.onion/" class="selectedItem">
               <h4><a href="//some.onion">Hidden Service Title</a></h4>
               <p>
-              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks 
-              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ... 
+              GlobaLeaks Error! :( Your browser is not running Javascript, and It's required to use GlobaLeaks
+              anonymous submission client, because is entirely Javascript based. It's common believe that Javascript ...
               </p>
               <p class="metadata">
-                <cite>some.onion</cite> &mdash; 
+                <cite>some.onion</cite> &mdash;
                 <span class="lastSeen" data-timestamp="0">last seen 14 hours ago</span> &mdash;
                 <a href="#" title="Report this link to us">Report Abuse</a>
               </p>
             </li>
           </ol>
           <div class="pager">
-            
+            <ul>
+              <li class="endcap limited"><a href="#">Previous</a></li>
+              <li><a href="#"><span class="sr">Page </span>1</a></li>
+              <li><a href="#"><span class="sr">Page </span>2</a></li>
+              <li><a href="#"><span class="sr">Page </span>3</a></li>
+              <li><a href="#"><span class="sr">Page </span>4</a></li>
+              <li class="endcap"><a href="#">Next</a></li>
+            </ul>
+            <p class="footer"><a href="#top">Back to Top</a></p>
           </div>
         </div>
 
