make current page stand out

--- a/design/results.html
+++ b/design/results.html
@@ -103,7 +103,7 @@
           <div class="pager">
             <ul>
               <li class="endcap limited"><a href="#">Previous</a></li>
-              <li><a href="#"><span class="sr">Page </span>1</a></li>
+              <li class="active"><a href="#"><span class="sr">Page </span>1</a></li>
               <li><a href="#"><span class="sr">Page </span>2</a></li>
               <li><a href="#"><span class="sr">Page </span>3</a></li>
               <li><a href="#"><span class="sr">Page </span>4</a></li>
