basic about styles

--- a/design/about.html
+++ b/design/about.html
@@ -45,7 +45,7 @@
 
         <div id="ahmiaAboutPage">
           <div class="aboutAhmia">
-          <h2>About Ahmia</h2>
+          <h2 class="sr">About Ahmia</h2>
           <p>
           Ahmia's mission is to create the premier search engine for services residing on the Tor
           anonymity network. In doing so, we hope to share meaningful statistics, insights, and news
@@ -70,7 +70,7 @@
           </div>
           <div class="aboutTeam">
           <h3>About Juha Nurmi, Ahmia Project Leader</h3>
-          <img src="/static/images/team_juha.jpg" alt="Juha Nurmi">
+          <img src="/images/juha_nurmi.png" alt="Juha Nurmi" class="teamPhoto">
           <p>
           <strong>Juha Nurmi</strong> (<a href="mailto:juha.nurmi@ahmia.fi">juha.nurmi@ahmia.fi</a>) is the
           founder and project leader of the Ahmia search engine project. He is the CEO of data mining and
@@ -90,14 +90,16 @@
           </ul>
           </div>
           <div class="credits">
-          <p>We extend a thank you to Ahmia's supporters:</p>
+          <p>
+          We extend a thank you to Ahmia's supporters.
+          If you believe in Ahmia, please <a href="bitcoin:3CMc52oegWqorFsBRcakUGHkZEQMfLP43s">donate BTC</a>.</p>
+          </p>
           <ul>
             <li><img src="/static/images/globaleaks.png" alt="Globaleaks Platform"></li>
             <li><img src="/static/images/tor2web.png" alt="Tor2Web Platform"></li>
             <li><img src="/static/images/hermes.png" alt="HERMES Center for Transparency and Digital Rights"></li>
             <li><img src="/static/image/tor.png" alt="Tor Project"></li>
           </ul>
-          <p class="beg">If you believe in Ahmia, please <a href="bitcoin:3CMc52oegWqorFsBRcakUGHkZEQMfLP43s">donate BTC</a>.</p>
           </div>
         </div>
 
