add sponsor images

--- a/design/about.html
+++ b/design/about.html
@@ -95,10 +95,10 @@
           If you believe in Ahmia, please <a href="bitcoin:3CMc52oegWqorFsBRcakUGHkZEQMfLP43s">donate BTC</a>.</p>
           </p>
           <ul>
-            <li><img src="/static/images/globaleaks.png" alt="Globaleaks Platform"></li>
-            <li><img src="/static/images/tor2web.png" alt="Tor2Web Platform"></li>
-            <li><img src="/static/images/hermes.png" alt="HERMES Center for Transparency and Digital Rights"></li>
-            <li><img src="/static/image/tor.png" alt="Tor Project"></li>
+            <li><img src="/images/logos/globaleaks.png" alt="Globaleaks Platform"></li>
+            <li><img src="/images/logos/tor2web.png" alt="Tor2Web Platform"></li>
+            <li><img src="/images/logos/hermes.png" alt="HERMES Center for Transparency and Digital Rights"></li>
+            <li><img src="/images/logos/torproject.png" alt="Tor Project"></li>
           </ul>
           </div>
         </div>
