--- a/design/about.html
+++ b/design/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Lorem ipsum dolor sit &mdash; Ahmia</title>
+        <title>About Us &mdash; Ahmia</title>
         <meta name="description" content="A search engine for services accessible on the Tor network.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,7 @@
           <div class="maxiContent">
             <h1><a href="/">Ahmia</a></h1>
             <form id="searchForm" class="searchForm autocomplete" action="/" method="get">
-              <input id="id_q" type="search" name="q" value="Lorem ipsum dolor sit">
+              <input id="id_q" type="search" name="q" placeholder="Search Ahmia">
               <input type="submit" value="Search" style="submitButton">
             </form>
           </div>
