--- a/design/index.html
+++ b/design/index.html
@@ -65,6 +65,7 @@
       </div>
 
       <script src="js/jquery.min.js"></script>
+      <script src="js/utils.js"></script>
       <script>
         $(document).ready(function() {
           $("#id_q").focus();
